fix tag area spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body {
 	border: 2px solid #035;
 	margin: auto !important;
 	margin-bottom: 40px !important;
-	height: 400px;
+	height: 400px;;
 	background-color: #ffffff66;
 	font-size: 20px;
 }
